--- a/pc/index.html
+++ b/pc/index.html
@@ -4,7 +4,7 @@
 <title>LF MALL</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic">
+<link rel="stylesheet" href="csss-/font.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 <link rel="shortcut icon" href="images/LF_favicon.ico">
 <link rel="stylesheet" href="css/reset.css">
@@ -115,28 +115,6 @@
 		</div>
 		<div class="keyvisual">
 			<div class="key_moving">
-				<ul>
-					<li>
-							<a href="" class="img"><img src="images/key1.jpg" alt="key1"></a>
-							<a href="" class="text"><img src="images/key_text1.png" alt="keytext1"></a>
-					</li>
-					<li>
-						<a href="" class="img"><img src="images/key2.jpg" alt="key1"></a>
-						<a href="" class="text"><img src="images/key_text.png" alt="keytext1"></a>
-					</li>
-					<li>
-						<a href="" class="img"><img src="images/key3.jpg" alt="key1"></a>
-						<a href="" class="text"><img src="images/key_text2.png" alt="keytext1"></a>
-					</li>
-					<li>
-						<a href="" class="img"><img src="images/key4.jpg" alt="key1"></a>
-						<a href="" class="text"><img src="images/key_text3.png" alt="keytext1"></a>
-					</li>
-					<li>
-							<a href="" class="img"><img src="images/key1.jpg" alt="key1"></a>
-							<a href="" class="text"><img src="images/key_text1.png" alt="keytext1"></a>
-					</li>
-				</ul>
 			</div>
 			<div class="key_btn">
 				<a href="#" class="left">left</a>
