--- a/pc/index.html
+++ b/pc/index.html
@@ -4,7 +4,7 @@
 <title>LF MALL</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-<link rel="stylesheet" href="csss-/font.css">
+<link rel="stylesheet" href="css/font.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 <link rel="shortcut icon" href="images/LF_favicon.ico">
 <link rel="stylesheet" href="css/reset.css">
