--- a/pc/index.html
+++ b/pc/index.html
@@ -115,6 +115,28 @@
 		</div>
 		<div class="keyvisual">
 			<div class="key_moving">
+				<ul>
+					<li>
+							<a href="" class="img"><img src="images/key1.jpg" alt="key1"></a>
+							<a href="" class="text"><img src="images/key_text1.png" alt="keytext1"></a>
+					</li>
+					<li>
+						<a href="" class="img"><img src="images/key2.jpg" alt="key1"></a>
+						<a href="" class="text"><img src="images/key_text.png" alt="keytext1"></a>
+					</li>
+					<li>
+						<a href="" class="img"><img src="images/key3.jpg" alt="key1"></a>
+						<a href="" class="text"><img src="images/key_text2.png" alt="keytext1"></a>
+					</li>
+					<li>
+						<a href="" class="img"><img src="images/key4.jpg" alt="key1"></a>
+						<a href="" class="text"><img src="images/key_text3.png" alt="keytext1"></a>
+					</li>
+					<li>
+							<a href="" class="img"><img src="images/key1.jpg" alt="key1"></a>
+							<a href="" class="text"><img src="images/key_text1.png" alt="keytext1"></a>
+					</li>
+				</ul>
 			</div>
 			<div class="key_btn">
 				<a href="#" class="left">left</a>
